Switch to external crates for FFI.
Signed-off-by: Peter Atashian <retep998@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,7 @@ readme = "README.md"
 keywords = ["iocp", "input", "output", "completion", "port"]
 
 license = "MIT"
+
+[dependencies]
+kernel32-sys = "*"
+winapi = "*"
